Bug 1066331 - Fix for multi-line template strings reflecting incorrect debugger line numbers r=jorendorff