js/src/frontend/TokenStream.cpp
@@ -1737,6 +1737,8 @@ bool TokenStream::getStringOrTemplateToken(int qc, Token **tp)
                     if (userbuf.peekRawChar() == '\n')
                         skipChars(1);
                 }
+                updateLineInfoForEOL();
+                updateFlagsForEOL();
             } else if (qc == '`' && c == '$') {
                 if ((nc = getCharIgnoreEOL()) == '{')
                     break;
